fixed hero-heading visibility in firefox

--- a/style.css
+++ b/style.css
@@ -17,15 +17,12 @@ body{
     color: white;
     font-family: 'Chakra Petch', sans-serif;
 }
-.container{
+.container {
     position: relative;
     text-align: center;
     width: 100%;
     height: 800px;
     background-image: url(images/hero-image.png);
-    -moz-box-shadow:    inset  0 -10px 10px -10px rgb(7, 7, 7);
-    -webkit-box-shadow: inset  0 -10px 10px -10px rgb(7, 7, 7);
-    box-shadow:        inset  0 -10px 10px -10px rgb(7, 7, 7);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -34,52 +31,53 @@ body{
     margin: 0;
     padding: 0;
     animation: change 10s infinite ease-in-out;
-}
-
-@keyframes change{
-    0%
-    {
-        background-image: url(images/hero-image.png);
+  }
+  
+  @keyframes change {
+    0% {
+      background-image: url(images/hero-image.png);
     }
-    30%
-    {
-        background-image: url(images/restaurant.jpg);
+    30% {
+      background-image: url(images/restaurant.jpg);
     }
-    60%
-    {
-        background-image: url(images/restaurant2.jpg);
+    60% {
+      background-image: url(images/restaurant2.jpg);
     }
-    100%
-    {
-        background-image: url(images/hero-image.png);
+    100% {
+      background-image: url(images/hero-image.png);
     }
-}
-.hero-header{
-    font-size: 250px;
+  }
+  
+  .hero-header {
+    font-size: 230px;
     text-transform: uppercase;
     font-weight: 700;
-    background: -webkit-linear-gradient(#0c1403, #728b1a, #f5990f, #0a0901);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
     opacity: 0.7;
     position: absolute;
-    top: 40%;
-    left: 52%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     letter-spacing: 20px;
-    
-}
-.hero-header:hover{
+  }
+  
+  .hero-header:hover {
     opacity: 1;
-}
-.hero-hover{
-   transition: 0.6s;
-}
-.hero-hover:hover{
+  }
+  
+  #hero-hover {
+    transition: 0.6s;
+  }
+  
+  #hero-hover:hover {
     opacity: 1;
     font-size: 270px;
-}
+  }
+  
+  .hero-text {
+    background: linear-gradient(#0c1403, #728b1a, #f5990f, #0a0901);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 .navbar{
     width: 100%;
     background-color: transparent;
@@ -771,7 +769,7 @@ footer{
         left: 52%;
         letter-spacing: 15px;
     } 
-    .hero-hover:hover{
+    #hero-hover:hover{
         font-size: 170px;
     }
     .gallery-heading{
@@ -908,7 +906,7 @@ footer{
         left: 52%;
         letter-spacing: 10px;
     } 
-    .hero-hover:hover{
+    #hero-hover:hover{
         font-size: 120px;
     }
     .chef-container-grid > img{
@@ -1028,7 +1026,7 @@ footer{
         left: 52%;
         letter-spacing: 8px;
     } 
-    .hero-hover:hover{
+    #hero-hover:hover{
         font-size: 80px;
     }
     .image-frame{
@@ -1112,7 +1110,7 @@ footer{
         left: 52%;
         letter-spacing: 5px;
     } 
-    .hero-hover:hover{
+    #hero-hover:hover{
         font-size: 70px;
     }
     .home-menu-heading{
